--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "firebase-realtime-chat",
+  "homepage": "https://kiril-chat.web.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/firestore-types": "^2.5.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "date-fns": "^2.26.0",
+    "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
@@ -39,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/date-fns": "^2.6.0",
+    "@types/styled-components": "^5.1.15"
   }
 }
